[package]
name = "wlcs"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1" # nix
description = "Bindings/helpers for WLCS (Wayland Conformance Test Suite)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
container_of = "0.5.1"
memoffset = "0.9.0"
nix = { version = "0.27.1", default-features = false, features = ["signal"] }
wayland-sys = { version = "0.31.1", features = ["client", "server"] }
